TEST_PROGRAMS/VALID/shabbir_hussain/prog4.min
var s: string;
s = "hello?is this! real. l1fe?";

