TEST_PROGRAMS/INVALID/mathieu_boucher/invalid1.min
#invalid strings

var s1 : string;
var s2 : string;
var s3 : string;


s3 = "";

s1 = "$";

s2 = "hello 
";


